<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ServerStatus</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="display_stats">Refresh Stats</string>
    <string name="title_activity_target_details">TargetDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_target_overview">TargetOverviewActivity</string>
    <string name="new_target">New Target</string>
    <string name="title_activity_create_target">CreateTargetActivity</string>
    <string name="target_uri">Target URI</string>
    <string name="target_type">Target type</string>
    <string name="create_target">Create Target</string>
    <string name="save_target">Save Target</string>
    <string name="delete_all_targets">Delete All</string>
    <string name="refresh_targets">Refresh</string>
    <string name="edit_target">Edit Target</string>
    <string name="edit">Edit</string>
    <string name="delete_target">Delete Target</string>
    <string name="delete">Delete</string>
    <string name="reset_stats">Reset Stats</string>
    <string name="reset">Reset</string>
    <string name="general">General</string>
    <string name="reporting">Reporting</string>
    <string name="vibrate">Vibrate</string>
    <string name="sent_sms">Sent SMS</string>
    <string name="phone_number">Phone Number</string>
    <string name="notification">Notification</string>

    <string-array name="target_types">
        <item>Host</item>
        <item>Website</item>
    </string-array>

    <string name="title_activity_app_preference">AppPreferenceActivity</string>

</resources>
