<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/start_service"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/start_service"
        android:layout_below="@+id/title"
        android:onClick="onClickStartService" />
    <Button
        android:id="@+id/stop_service"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/stop_service"
        android:layout_below="@+id/start_service"
        android:onClick="onClickStopService" />
    <Button
        android:id="@+id/display_stats"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/display_stats"
        android:layout_below="@+id/stop_service"
        android:onClick="displayStats" />
    <Button
        android:id="@+id/displayTargets"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Display target overview"
        android:layout_below="@+id/display_stats"
        android:onClick="displayTargets" />

    <TableLayout
        android:id="@+id/tblStatResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_stats"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" >
    </TableLayout>
</RelativeLayout>
